--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ../../out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-hexgrid.dat
+
 
 # Gradle - ne pas versionner les fichiers générés
 .gradle/
@@ -48,3 +48,6 @@ bin/
 # OS
 .DS_Store
 Thumbs.db
+/hexData.dat
+/hexData.dat.backup
+/hexgrid.dat
